<resources>
    <string name="app_name">promocare_android</string>
    <string name="connection_user_button_text">Se connecter</string>
    <string name="connection_bottom_text">Mentions légales</string>
    <string name="connection_bottom_text_date">© 2024 PC | Tous droits réservés</string>
    <string name="connection_user_placeholder">Mot de passe</string>
    <string name="user_connection_email_placeholder">E-mail</string>
    <string name="user_connection_title">Bienvenue</string>
    <string name="user_connection_empty_error">Veuillez remplir les champs</string>
    <string name="user_connection_no_connection_error">Un problème s est produit veuillez réessayer</string>
    <string name="user_connection_wrong_credentials_error">Les données renseigner ne sont pas correctes</string>
    <string name="user_connexion_go_to_inscription">Inscrivez-vous</string>
    <string name="connexion_user_go_to_company">Connectez vous sur votre espace entreprise</string>
    <string name="connexion_company_title">Accéder à votre espace entreprise</string>
    <string name="connexion_company_go_to_user">Se connecter en tant qu\'utilisateur</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_add_button">Add an annonce</string>
    <string name="annonce_image">Annonce_image</string>
    <string name="description_logo_reduction">Logo_reduction</string>
    <string name="button_text_delete_annonce_company">Supprimer l\'annonce</string>
    <string name="modify_button_text_annonce">Modifier l\'annonce</string>
    <string name="formatage_price">%.2f€</string>
    <string name="no_result_text">Pas de résultat pour cette recherche</string>
    <string name="error_text">Une erreur est survenue veuillez réessayer</string>
    <string name="votre_titre_d_annonce">Votre titre d\'annonce</string>
    <string name="choississez_votre_titre">Choississez votre titre</string>
    <string name="enregistrer_ce_titre">Enregistrer ce titre</string>
    <string name="enregistrer_cette_description">Enregistrer cette description</string>
    <string name="votre_description">Votre description</string>
    <string name="button_category_text">Menage à domicile</string>
    <string name="title_add_annonce_category">Choississez une catégorie</string>
    <string name="cuisine_domicile">Cuisine à domicile</string>
    <string name="conducteur_personnel">Conducteur personnel</string>
    <string name="soin_personnalis">Soin personnalisé</string>
    <string name="ou_tes_vous_localiser">Ou êtes vous localiser ?</string>
    <string name="localisation">Localisation</string>
    <string name="enregistrer_cette_localisation">Enregistrer cette localisation</string>
    <string name="passer_cette_tape">Passer cette étape</string>
    <string name="prix">Prix</string>
    <string name="votre_prix">Votre prix</string>
    <string name="device_in_price">€</string>
    <string name="votre_promo_en">Votre promo (en %)</string>
    <string name="percentage_in_promo">%</string>
    <string name="promo">Promo</string>
    <string name="le_prix_est_de_error">Le prix est de : Error</string>
    <string name="validez_le_prix">Mise en ligne de l\'annonce</string>
    <string name="la_liste_d_annonce">La liste d\'annonce</string>
    <string name="detail_de_l_annonce">Detail de l\'annonce</string>
    <string name="contactez_l_auteur_de_cette_annonce">Contactez l\'auteur de cette annonce</string>
    <string name="entamer_la_conversation">Entamer la conversation</string>
    <string name="votre_message">Votre message</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="vos_conversations">Vos conversations</string>
    <string name="pas_de_conversation_n_h_siter_pas_contacter_un_vendeur">Pas de conversation, n\'hésiter pas à contacter un vendeur</string>
    <string name="faire_une_offre">Faire une offre</string>
    <string name="cr_er_votre_offre">Créer votre offre</string>
    <string name="date_de_commencement">Date de commencement</string>
    <string name="puis">Puis</string>
    <string name="date_de_fin">Date de fin</string>
    <string name="envoyez_ces_donn_es">Envoyez ces données</string>
    <string name="choississez_la_fr_quence">Choississez la fréquence</string>
    <string name="frequence">Frequence</string>
    <string name="choisir_cette_fr_quence">Choisir cette fréquence</string>
    <string name="ou_cela_se_d_roule_t_il">Ou cela se déroule-t-il ?</string>
    <string name="nombre_de_s_ance">Nombre de séance</string>
    <string name="prix_par_s_ance">prix par séance (obligatoire)</string>
    <string name="choississez_votre_prix_et_le_nombre_de_s_ance">Choississez votre prix et le nombre de séance total</string>
    <string name="envoyer_cette_offre">Envoyer cette offre</string>
    <string name="r_capitulatif_de_votre_offre">Récapitulatif de votre offre</string>
    <string name="la_premier_session_est">La premier session est le :</string>
    <string name="la_derni_re_est_le">La dernière est le :</string>
    <string name="se_d_rouleront_au_chez">Se dérouleront au/chez :</string>
    <string name="avec_une_fr_quence_de">Avec une fréquence de :</string>
    <string name="pour_un_prix_par_s_ance_et_un_toal_de_s_ance">Pour un prix par séance et un total de séances de</string>
    <string name="ajouter_un_commentaire">Ajouter un commentaire</string>
    <string name="lieu_de_rdv">Lieu de rdv</string>
    <string name="error_password_mismatch">Les mots de passe ne correspondent pas.</string>
    <string name="error_empty_fields">Tous les champs sont obligatoires.</string>
    <string name="user_inscription_title">Inscription</string>
    <string name="user_first_name_placeholder">Prénom</string>
    <string name="user_last_name_placeholder">Nom</string>
    <string name="user_inscription_email_placeholder">Email</string>
    <string name="user_inscription_password_placeholder">Mot de passe</string>
    <string name="user_inscription_confirm_password_placeholder">Confirmer mot de passe</string>
    <string name="inscription_user_button_text">Inscrivez-vous</string>
    <string name="user_inscription_go_to_connection">Retour à la connexion</string>
    <string name="inscription_bottom_text">Votre texte de bas de page ici</string>
    <string name="inscription_bottom_text_date">Date ici</string>
    <string name="inscriptiopn_user">S\'inscrire</string>
    <string name="error_invalid_siret_number">Votre numéro SIRET doit comporter 14 caractères.</string>
    <string name="error_invalid_email">Veuillez utiliser un format d\'email valide.</string>
    <string name="user_registration_no_connection_error">Erreur de connexion. Veuillez vérifier votre connexion Internet.</string>
    <string name="user_registration_error">Erreur lors de l\'inscription. Veuillez réessayer.</string>

    <string name="refused">Refused</string>
    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="pas_d_offre_disponible_pour_le_moment">Pas d\'offre disponible pour le moment</string>
    <string name="d_tail_de_votre_offre">Détail de votre offre</string>
    <string name="annonce">ANNONCE</string>
    <string name="accepter_l_offre">Accepter l\'offre</string>

    <string name="logout_icon_desc">Deconnexion</string>
    <string name="description_de_l_offre">Description de l\'offre :</string>
    <string name="description_de_l_annonce">Description de l\'annonce :</string>
    <string name="refuser_l_offre">Refuser l\'offre</string>
    <string name="annonce_refus">Annonce refusé</string>
    <string name="annonce_accept">Annonce accepté</string>
    <string name="la_description_ne_doit_pas_d_passer_1000_caract_res">La description ne doit pas dépasser 1000 caractères</string>
    <string name="la_description_ne_doit_pas_tre_vide_ou_inf_rieur_25_caract_res">La description ne doit pas être vide ou inférieur à 25 caractères</string>
    <string name="l_adresse_ne_peut_pas_d_passer_100_caract_res">L\'adresse ne peut pas dépasser 100 caractères</string>
    <string name="l_adresse_ne_peut_pas_tre_vide_ou_inf_rieur_10_caract_res">L\'adresse ne peut pas être vide ou inférieur à 10 caractères</string>
    <string name="mauvaise_valeur">Mauvaise valeur</string>
    <string name="erreur_dans_le_calcul_du_prix">Erreur dans le calcul du prix</string>
    <string name="le_prix_ne_peut_pas_tre_inf_rieur_0">Le prix ne peut pas être inférieur à 0</string>
    <string name="une_r_duction_sup_rieur_100_ou_inf_rieur_0_n_est_pas_autoris">Une réduction supérieur à 100 ou inférieur à 0 n\'est pas autorisé</string>
    <string name="le_titre_ne_doit_pas_d_passer_100_caract_res">Le titre ne doit pas dépasser 100 caractères</string>
    <string name="le_titre_ne_doit_pas_tre_vide">Le titre ne doit pas être vide</string>
    <string name="date_inconnue">Date inconnue</string>
    <string name="date_inconnu_within_inner_class">Date inconnue</string>
    <string name="veuillez_remplir_les_champs">Veuillez remplir les champs</string>
    <string name="frequence_est_vide">Frequence est vide</string>
    <string name="non_renseign">Non renseigné</string>
    <string name="non_renseign_non_renseign">Non renseigné - Non renseigné</string>
    <string name="le_prix_est_obligatoire">Le prix est obligatoire</string>
    <string name="le_prix_ne_peut_pas_tre_0">Le prix ne peut pas être 0</string>
    <string name="image_promocare">IMAGE PROMOCARE</string>

</resources>