<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/creation_annonce_price_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/votre_prix"
        />

    <EditText
        android:id="@+id/creation_annonce_edit_view_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="description"
        android:hint="@string/prix"
        android:textColor="#000080"
        android:textColorHint="#B0C4DE"
        android:padding="20dp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_annonce_price_text_view_title"
        android:background="@drawable/circle_linear"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/end_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_in_price"
        android:textColorHint="#B0C4DE"
        android:paddingEnd="25dp"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/creation_annonce_edit_view_price"
        android:layout_marginEnd="20dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/creation_annonce_promo_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/creation_annonce_edit_view_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/votre_promo_en"
        />

    <EditText
        android:id="@+id/creation_annonce_edit_view_promo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="description"
        android:hint="@string/promo"
        android:textColor="#000080"
        android:textColorHint="#B0C4DE"
        android:padding="20dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_annonce_promo_text_view_title"
        android:background="@drawable/circle_linear"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/end_hint_promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage_in_promo"
        android:textColorHint="#B0C4DE"
        android:paddingEnd="25dp"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/creation_annonce_edit_view_promo"
        android:layout_marginEnd="20dp"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/creation_annonce_price_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/le_prix_est_de_error"
        app:layout_constraintTop_toBottomOf="@+id/creation_annonce_edit_view_promo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       />

    <Button
        android:id="@+id/creation_annonce_price_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validez_le_prix"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/button"
        app:layout_constraintTop_toBottomOf="@+id/creation_annonce_price_calculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>