<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/company_offer_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:text="@string/cr_er_votre_offre"
            />

        <EditText
            android:id="@+id/company_offer_date_start_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:autofillHints="Date de commencement"
            android:padding="15dp"
            android:hint="@string/date_de_commencement"
            app:layout_constraintTop_toBottomOf="@id/company_offer_title_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/circle_linear"
            android:inputType="date"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:text="@string/puis"/>

        <EditText
            android:id="@+id/company_offer_date_end_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:autofillHints="Date de commencement"
            android:padding="15dp"
            android:hint="@string/date_de_fin"
            app:layout_constraintTop_toBottomOf="@id/company_offer_title_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/circle_linear"
            android:inputType="date"
            />


        <Button
            android:id="@+id/company_offer_send_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoyez_ces_donn_es"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/button"
           />

        <TextView
            android:id="@+id/company_offer_error_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/error"
            android:layout_marginTop="20dp"
            android:visibility="invisible"/>


    </LinearLayout>

    <Button
        android:id="@+id/company_offer_skip_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passer_cette_tape"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>