<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/company_offer_title_text_view_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:text="@string/choississez_votre_prix_et_le_nombre_de_s_ance"
            />

        <EditText
            android:id="@+id/company_offer_seance_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:autofillHints="Prix"
            android:padding="15dp"
            android:hint="@string/nombre_de_s_ance"
            app:layout_constraintTop_toBottomOf="@id/company_offer_title_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/circle_linear"
            android:inputType="number"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:text="@string/prix_par_s_ance"/>

        <EditText
            android:id="@+id/company_offer_price_edit_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:autofillHints="Prix"
            android:padding="15dp"
            android:hint="@string/votre_prix"
            app:layout_constraintTop_toBottomOf="@id/company_offer_title_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/circle_linear"
            android:inputType="numberDecimal"
            />


        <Button
            android:id="@+id/company_offer_send_price_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoyez_ces_donn_es"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/button"
            />

        <TextView
            android:id="@+id/company_offer_error_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/error"
            android:layout_marginTop="20dp"
            android:visibility="invisible"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>