<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/company_offer_recap_tilte_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:text="@string/r_capitulatif_de_votre_offre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:text="@string/la_premier_session_est" />

            <TextView
                android:id="@+id/company_offer_recap_date_start_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:background="@drawable/circle_linear"
                android:text="@string/la_premier_session_est" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="25dp"
                android:text="@string/la_derni_re_est_le" />

            <TextView
                android:id="@+id/company_offer_recap_date_end_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:background="@drawable/circle_linear"
                android:text="@string/la_premier_session_est" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="25dp"
                android:text="@string/se_d_rouleront_au_chez" />

            <TextView
                android:id="@+id/company_offer_recap_location_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:background="@drawable/circle_linear"
                android:text="@string/la_premier_session_est" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="25dp"
                android:text="@string/avec_une_fr_quence_de" />

            <TextView
                android:id="@+id/company_offer_recap_frequency_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:background="@drawable/circle_linear"
                android:text="@string/la_premier_session_est" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="25dp"
                android:text="@string/pour_un_prix_par_s_ance_et_un_toal_de_s_ance" />

            <TextView
                android:id="@+id/company_offer_recap_price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:background="@drawable/circle_linear"
                android:text="@string/la_premier_session_est" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="25dp"
                android:text="@string/ajouter_un_commentaire" />

            <EditText
                android:id="@+id/company_offer_recap_comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autofillHints="COMMENTAIRE"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="35dp"
                android:background="@drawable/circle_linear"
                android:hint="@string/ajouter_un_commentaire"
                android:inputType="textImeMultiLine" />

            <Button
                android:id="@+id/company_offer_create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/envoyer_cette_offre"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/button" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
