<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/no_result_conv_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entamer_la_conversation"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/conversation_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        tools:listitem="@layout/cell_layout_conversation"
    />

    <EditText
        android:id="@+id/message_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="message"
        android:hint="@string/votre_message"
        android:inputType="textMultiLine"
        android:layout_margin="5dp"
        android:background="@drawable/circle_linear"
        android:padding="10dp"
        android:paddingEnd="35dp"
        android:paddingStart="15dp"
        android:layout_gravity="bottom"
        />

    <ImageView
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/send_message"
        android:background="@drawable/send"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="bottom|end"
        />

</FrameLayout>
